--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
     "sudo": "^1.0.3"
   },
   "scripts": {
