--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "contentful": "^7.8.1",
     "install": "^0.12.2",
     "npm": "^6.9.2",
     "react": "^16.8.6",
